some changes in payment controller and security configuration